Fix hanging application bug